More updates to the guide